<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketsActivity">

    <TextView
        android:id="@+id/txtPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/tickets_title"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tablePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/tickets_adult"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtAdult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/tickets_zero_value"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/tickets_child"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/tickets_zero_value"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/tickets_student"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/tickets_zero_value"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tablePrice"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/tickets_settings_msg"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/offlineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="false"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/tickets_offline"
        android:textAlignment="center"
        android:textColor="#A8190A"
        android:textSize="20sp"
        android:textStyle="italic"
        android:visibility="invisible" />

</RelativeLayout>
