<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:focusable="false">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false">

        <ImageView
            android:id="@+id/imgArtwork"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="#D9D9D9"
            android:contentDescription="@string/master_list_image_of_the_artwork"
            android:focusable="false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:ellipsize="none"
                android:focusable="false"
                android:maxLines="2"
                android:scrollHorizontally="false"
                android:text="@string/master_list_artwork_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:focusable="false"
                android:text="@string/master_list_artist_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:focusable="false"
                android:text="@string/master_list_artist_year"
                android:textSize="15sp"
                android:textStyle="italic" />

            <RatingBar
                android:id="@+id/ratingBarMaster"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:focusable="false"
                android:numStars="5"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:stepSize="1.0"
                android:transformPivotX="0dp" />

        </RelativeLayout>

    </TableRow>
</TableLayout>